--- a/portfolio/src/components/hvem.scss
+++ b/portfolio/src/components/hvem.scss
@@ -1,27 +1,34 @@
+.wrapper {
+    height: 100%;
+    max-width: 100%;
+    margin: auto;
+}
+
 .card1 {
-    font-family: Arial, Helvetica, sans-serif;
-    color: black;
-    background-color: white;
-    border: solid white;
-    border-radius: 25px;
-    height: 40vh;
-    width: 40vw;
-    position: absolute;
-    top: 20vh;
-    left: 30vw;
+    height: calc(100vh - 100px);
+    color: white;
+    font-family: arial;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    margin: 5px;
-    padding: 25px;
-    align-items: flex-start;
+    justify-content: flex-start;
+    align-items: center;
+    letter-spacing: -1px;
+    margin: 20px;
+    padding: 20px;
+    position: absolute;
+    left: 20vw;
+    bottom: -40vh;
+    overflow: hidden;
 
     h1 {
         font-size: 42px;
+        z-index: 2;
+        color: #DDD92A;
     }
 
     h2 {
         font-size: 36px;
+        z-index: 2;
     }
 
     p {
@@ -29,27 +36,36 @@
         top: 50px;
         opacity: 0.2;
         padding-top: 2px;
+        color: #7E7F83;
     }
 
-    #mig {
-        position: absolute;
-        right: 3vw;
-        top: 2vh;
-        margin: 20px;
-        padding: 0px;
-
-        border-radius: 15px;
-        border: solid black 2px;
-    }
-
-    @media screen and (min-width: 760px) {
-        h1 {
-            top: 50px;
-        }
-
-        h2 {
-            top: 80px;
+    @media screen and (max-width: 730px) {
+        h1, h2, p {
+            transform: scale(0.3);
+            position: relative;
+            width: auto;
+            height: 1vh;
         }
         
+    }
+}
+
+#mig {
+    position: absolute;
+    right: 20vw;
+    bottom: 25vh;
+    margin: 20px;
+    padding: 0px;
+    transform: scale(2);
+    border-radius: 15px;
+    border: solid black 2px;
+}
+
+@media screen and (max-width: 1230px) {
+    #mig {
+
+        transform: scale(1.5);
+        right: 15vw;
+        top: 15vh;
     }
 }
