--- a/portfolio/src/components/navbar.scss
+++ b/portfolio/src/components/navbar.scss
@@ -1,9 +1,11 @@
 .navbar {
-    position: fixed;
+    position:fixed;
     display: flex;
     height: 100px;
     left: 0px;
     top: 0px;
+    max-height: 100vh;
+    max-width: 100vw;
 
     .wrapper {
         max-width: 100vw;
@@ -19,7 +21,7 @@
 
     .bg-anim {
         background-color: white;
-        position: absolute;
+        position: fixed;
         left: 0px;
         width: 100px;
         height: 100vh;
@@ -44,5 +46,10 @@
         left: 12vw;
         top: 1vh;
         border: solid black 2px;
+    }
+
+    a:hover {
+        color: #DDD92A;
+        transition: all ease-in-out 0.2s;
     }
 }
