--- a/portfolio/src/components/navbar.scss
+++ b/portfolio/src/components/navbar.scss
@@ -23,7 +23,7 @@
         background-color: white;
         position: fixed;
         left: 0px;
-        width: 100px;
+        width: 200px;
         height: 100vh;
 
     }
@@ -46,10 +46,25 @@
         left: 12vw;
         top: 1vh;
         border: solid black 2px;
+        z-index: 10!important;
     }
 
     a:hover {
         color: #DDD92A;
         transition: all ease-in-out 0.2s;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .navbar {
+        .bg-anim {
+            width: 80px;            
+        }
+
+        .bg-anim > .links {
+            transform: scale(0.8);
+        }
+
+
     }
 }
