--- a/portfolio/src/App.scss
+++ b/portfolio/src/App.scss
@@ -13,6 +13,7 @@ body {
   background: rgb(221,217,42);
   background: linear-gradient(-80deg, rgba(221,217,42,1) 0%, rgba(0,0,0,1) 63%, rgba(0,0,0,1) 100%);
   font-family: "Open Sans", "Arial", "Times New Roman";
+  overflow-x: hidden;
 }
 
 .main-wrapper {
