--- a/portfolio/src/components/kontakt.scss
+++ b/portfolio/src/components/kontakt.scss
@@ -3,25 +3,32 @@
     h1 {
         position: absolute;
         color: #DDD92A;
-        left: 36vw;
+        left: 40.5vw;
         top: 335vh;
     }
-    .extra {
+    .extra, #copy-btn {
         position: relative;
         top: 90vh;
         left: 30vw;
-        color: #7E7F83;
+        color: black;
         mark {
             background-color: rgba(0,0,0,0);
-            color:#ddda2a80;
+            color:#11111180;
+            cursor:grab;
         }
     }
+
+    #copy-btn {
+        background-color: none;
+        border: none;
+    }
+
     form {
         color: white;
         display: flex;
         flex-direction: column;
         position: absolute;
-        left: 35vw;
+        left: 40vw;
         top: 340vh;
         width: auto;
         padding: 20px;
