--- a/portfolio/src/components/navbar.scss
+++ b/portfolio/src/components/navbar.scss
@@ -1,11 +1,12 @@
 .navbar {
     position:sticky;
     display: flex;
-    height: 100px;
+    height: 0px;
     left: 0px;
     top: 0px;
-    max-height: 100vh;
+    max-height: 90vh;
     max-width: 100vw;
+    z-index: 20;
 
     .wrapper {
         max-width: 100vw;
@@ -55,18 +56,24 @@
         color: #DDD92A;
         transition: all ease-in-out 0.2s;
     }
+
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1200px) {
     .navbar {
+        position: sticky;
+        height: 80vh;
         .bg-anim {
-            width: 80px;
+            width: 100px;
+            z-index: 50;
+            top: 0vh;
+            height: 101%;
         }
+    }
 
-        .bg-anim > .links {
-            transform: scale(0.8);
-        }
-
-
+    .nav-btn {
+        position: sticky;
+        top: 3vh !important;
+        left: 3vw !important;
     }
 }
