--- a/portfolio/src/App.scss
+++ b/portfolio/src/App.scss
@@ -21,12 +21,13 @@ body {
   grid-template-rows: 1fr 1fr 1fr 1fr;
 }
 
-#Hvem\? {
-  height: 100vh;
-  width: 100vw;
-  position: absolute;
-  top: 0;
-  z-index: 0;
+@media screen and (max-width: 900px) {
+  html {
+    scroll-snap-type:none;
+    scroll-behavior: auto;
+  }
+
+  #Kontakt {
+    height: auto;
+  }
 }
-
-
